# steerhead

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: requirements.txt
backend/app/: agent.py  database.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
