[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "steerhead"
version = "0.1.0"
description = "Local-first AI agent orchestration. The agent is the engine. Steerhead is the driver."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Justin" }]
requires-python = ">=3.11"
keywords = ["ai", "agent", "orchestration", "claude", "context", "memory", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.28.0",
    "gitpython>=3.1.43",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
steerhead = "steerhead.cli:app"

[project.urls]
Homepage = "https://github.com/justinshaw/steerhead"
Repository = "https://github.com/justinshaw/steerhead"
Issues = "https://github.com/justinshaw/steerhead/issues"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
